<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GrayArea</string>
    <string name="menu_settings">Settings</string>
    <string name="start">Begin</string>
    <string name="about">About</string>
    <string name="cont">Continue</string>
    <string name="load">Jump</string>
    <string name="options">Options</string>
    <string name="music">Music</string>
    <string name="history">History</string>
    <string name="title">Gray\nArea</string>
    <string name="decision">Make decision</string>
    <string name="home">Title Screen</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>